# flintai-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: config.json
examples/bookstore_agent/: agent.py
examples/weather_agent/: agent.py
flintai/: schema.py
flintai/cli/: __main__.py  builtin_config.json  console.py  eval_cli.py  init_cli.py  main.py  rich_observer.py  runner.py  scan_cli.py  utils.py
flintai/data/: llm01_prompt_injection.csv  llm02_sensitive_information.csv  llm05_unsafe_output.csv  llm06_excessive_agency.csv  llm07_system_prompt_leakage.csv  llm09_hallucination-goals.csv  llm09_hallucination.csv  pii_leakage.csv  secret_leakage.csv
flintai/data/detector_prompts/: llm01_adversarial.txt  llm01_fixed.txt  llm02_adversarial.txt  llm02_fixed.txt  llm05_adversarial.txt  llm05_fixed.txt  llm06_adversarial.txt  llm06_fixed.txt  llm07_adversarial.txt  llm07_fixed.txt  llm09_adversarial.txt  llm09_fixed.txt
flintai/eval/common/: log.py  utils.py  (+5 more)
flintai/scan/: __init__.py  agent_scanner.py  constants.py  file_filter.py  llm_provider.py  opengrep_resolver.py  reasoner.py  schema.py  scorer.py  secret_anonymizer.py  static_scanner.py  taxonomy.py  tool_dispatcher.py  trace_logger.py  trace_logger_file.py  trace_logger_log.py  triage.py
tests/cli/: test_json_store.py  test_main.py  test_runner.py
tests/scan/: test_agent_scanner_units.py  test_agent_security_scanner.py  test_file_filter.py  test_llm_provider.py  test_static_scanner.py  test_taxonomy.py  test_tool_dispatcher.py  test_trace_logger.py  test_triage.py
(+121 files in other folders)
